[tool.poetry]
name = "rec"
version = "0.1.0"
description = "On computer programming"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
